// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.

syntax = "proto3";

package foundation.universe.db.postgres.incluster;

option go_package = "namespacelabs.dev/foundation/universe/db/postgres/incluster";

import "std/proto/options.proto";
import "std/types/resource.proto";

message Database {
    string                        name        = 1;
    foundation.std.types.Resource schema_file = 2 [(foundation.std.proto.provision_only) = true];
    // If set, uses this resource instead of "universe/db/postgres/server".
    // "name" and "schema_file" can't be set in this case.
    string resource_ref = 3;
}